--- a/src/App.css
+++ b/src/App.css
@@ -28,6 +28,10 @@
   color: #61dafb;
 }
 
+#clothing-btn, #restaurant-btn, #convinience-btn, #grocery-btn {
+  display:inline-block;
+}
+
 @keyframes App-logo-spin {
   from {
     transform: rotate(0deg);
